# openEnv

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
openenv_electrician/: __init__.py  data.py  environment.py  models.py  tasks.py
scripts/: validate-submission.sh
server/: app.py
