[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-electrician"
version = "0.1.0"
description = "OpenEnv environment for electrician scheduling/dispatch"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
]

[project.scripts]
server = "server.app:main"
electrician-server = "server.app:main"

[tool.setuptools.packages.find]
include = ["openenv_electrician*", "server*"]
